Code cleanup as per PMD.
git-svn-id: https://jedit.svn.sourceforge.net/svnroot/jedit/plugins/FastOpen/trunk@6757 6b1eeb88-9816-0410-afa2-b43733a0f04e